--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,7 +38,7 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${libs.MySQL_8.0.26.classpath}:\
-    ${libs.jstl.classpath}
+    ${libs.Jakarta_JSTL_2.0.0.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
